[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/world_map/WorldMapScene.gd" id="1"]

[node name="WorldMapScene" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.06, 0.14, 1)

[node name="NodeContainer" type="Node2D" parent="."]

[node name="Avatar" type="Node2D" parent="."]
position = Vector2(180, 620)

[node name="AvatarSprite" type="ColorRect" parent="Avatar"]
position = Vector2(-8, -16)
size = Vector2(16, 16)
color = Color(0.2, 0.7, 1.0, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="PanelContainer" parent="UI"]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -140.0
offset_right = 280.0
offset_bottom = -8.0

[node name="VBox" type="VBoxContainer" parent="UI/InfoPanel"]

[node name="Title" type="Label" parent="UI/InfoPanel/VBox"]
text = "Select a node"

[node name="Hint" type="Label" parent="UI/InfoPanel/VBox"]
text = ""

[node name="LaunchButton" type="Button" parent="UI/InfoPanel/VBox"]
text = "Play Level"

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
offset_left = 8.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 36.0
text = "Menu"
